--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,17 @@
     "chai-http": "^3.0.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
+    "cron": "^1.2.1",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.4.1",
+    "kue": "^0.11.6",
     "mocha": "^3.4.2",
     "mongoose": "^4.10.5",
     "morgan": "~1.8.1",
+    "nodemailer": "^4.0.1",
     "serve-favicon": "~2.4.2"
   }
 }
