--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^4.1.2",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vuefire": "^1.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
